+add: Swipe left right to change pokemon on details *change: update layout after change pokemon details

--- a/pokemon/pokemon/Classes/Views/PokemonDetailsTopView.xib
+++ b/pokemon/pokemon/Classes/Views/PokemonDetailsTopView.xib
@@ -11,6 +11,7 @@
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="5NT-pA-QfX"/>
                 <outlet property="segmentedControl" destination="w3D-0C-gFd" id="r7K-hP-9jY"/>
+                <outlet property="swipeInfoLabel" destination="z9h-Xi-IIE" id="Egx-qg-T9i"/>
                 <outlet property="tableView" destination="RMr-74-mTk" id="yXm-h3-7yO"/>
             </connections>
         </placeholder>
@@ -31,22 +32,31 @@
                     </connections>
                 </segmentedControl>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RMr-74-mTk">
-                    <rect key="frame" x="20" y="91" width="374" height="795"/>
+                    <rect key="frame" x="20" y="91" width="374" height="754"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z9h-Xi-IIE">
+                    <rect key="frame" x="24" y="865" width="366" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="w3D-0C-gFd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="2Xd-Yf-SaA"/>
+                <constraint firstItem="z9h-Xi-IIE" firstAttribute="top" secondItem="RMr-74-mTk" secondAttribute="bottom" constant="20" id="AvC-dL-Ahd"/>
+                <constraint firstAttribute="bottom" secondItem="z9h-Xi-IIE" secondAttribute="bottom" constant="10" id="Cum-Ln-A4g"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="w3D-0C-gFd" secondAttribute="trailing" constant="24" id="ILg-tI-Sju"/>
                 <constraint firstItem="RMr-74-mTk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="P5f-el-0wM"/>
                 <constraint firstItem="w3D-0C-gFd" firstAttribute="centerX" secondItem="RMr-74-mTk" secondAttribute="centerX" id="UF2-lh-ufY"/>
                 <constraint firstItem="w3D-0C-gFd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="W5i-ed-ZIw"/>
-                <constraint firstAttribute="bottom" secondItem="RMr-74-mTk" secondAttribute="bottom" constant="10" id="lRP-KZ-SSW"/>
                 <constraint firstItem="RMr-74-mTk" firstAttribute="top" secondItem="w3D-0C-gFd" secondAttribute="bottom" constant="40" id="m0X-2Q-FuJ"/>
                 <constraint firstAttribute="trailing" secondItem="RMr-74-mTk" secondAttribute="trailing" constant="20" id="t0a-mV-WIP"/>
+                <constraint firstItem="z9h-Xi-IIE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="t3N-cC-4cm"/>
+                <constraint firstAttribute="trailing" secondItem="z9h-Xi-IIE" secondAttribute="trailing" constant="24" id="wMA-sK-Frm"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="139" y="102"/>
